# archforge

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  design_patterns.md  getting_started.md
examples/generated_service/: README.md
scripts/: bootstrap.py
src/archforge/: __main__.py
src/archforge/builders/: __init__.py  project_builder.py
src/archforge/cli/: __init__.py  app.py
src/archforge/core/: __init__.py  config.py  exceptions.py
src/archforge/core/constants/: __init__.py  layout.py
src/archforge/core/contracts/: __init__.py  generator.py  plugin.py  service.py
src/archforge/factories/: __init__.py  framework_factory.py
src/archforge/generators/: __init__.py  base.py  file_generator.py  module_generator.py  project_generator.py
src/archforge/plugins/: __init__.py  core_plugin.py
src/archforge/services/: __init__.py  file_system.py  filesystem_service.py  plugin_loader.py  plugin_registry.py  template_renderer.py  validation_service.py
src/archforge/strategies/: __init__.py  database_strategy.py  framework_strategy.py  project_template_strategy.py
src/archforge/templates/: __init__.py
src/archforge/utils/: __init__.py  naming.py
tests/cli/: test_app.py
tests/integration/: test_plugin_extensions.py  test_project_generator.py
tests/unit/: test_filesystem_service.py  test_framework_factory.py  test_plugin_loader.py  test_project_config.py  test_project_templates.py  test_template_renderer.py
(+86 files in other folders)
