[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archforge"
version = "0.2.0"
description = "CLI platform for scaffolding Python backend services with Clean Architecture."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Vagner Spinola" }
]
dependencies = [
  "jinja2>=3.1.4",
  "pydantic>=2.8.2",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6.0",
  "mypy>=1.11.1",
  "pre-commit>=3.8.0",
  "pytest>=8.2.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.5",
]

[project.scripts]
archforge = "archforge.cli.app:run"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
archforge = [
  "templates/**/*.j2",
  "templates/**/.env.example.j2",
]

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["archforge", "tests"]
strict = true
warn_unreachable = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-q --cov=archforge --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.coverage.run]
source = ["src/archforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false